[gd_scene load_steps=19 format=3 uid="uid://tv5otmo255l3"]

[ext_resource type="Script" path="res://enemies/enemy_types/whale/whale.gd" id="1_0e55k"]
[ext_resource type="PackedScene" uid="uid://caqihyi58sptl" path="res://enemies/enemy_types/whale/water_drop/bubble.tscn" id="2_mcg1x"]
[ext_resource type="Texture2D" uid="uid://dw06lw2g4tkdq" path="res://enemies/enemy_types/enemy_assets/enemy_sprite_one.aseprite" id="3_3k1b1"]
[ext_resource type="Texture2D" uid="uid://yot42iuq4cj8" path="res://enemies/projectiles/bubble/assets/water1.png" id="4_1frej"]
[ext_resource type="Texture2D" uid="uid://d2wwd7ns0lvb0" path="res://enemies/projectiles/bubble/assets/water2.png" id="5_yewfm"]
[ext_resource type="PackedScene" uid="uid://wsyev6mgyaxq" path="res://enemies/modules/enemy_health/enemy_health.tscn" id="7_carwn"]
[ext_resource type="PackedScene" uid="uid://mi12axkylgws" path="res://misc/flasher/flasher.tscn" id="7_y1rsg"]
[ext_resource type="Script" path="res://sfx_player/autoload/sf_link.gd" id="9_tdk8y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ko7yy"]
atlas = ExtResource("3_3k1b1")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_liky6"]
atlas = ExtResource("3_3k1b1")
region = Rect2(16, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jsklx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko7yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liky6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_npoxn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_1frej")
}, {
"duration": 1.0,
"texture": ExtResource("5_yewfm")
}],
"loop": true,
"name": &"charge",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"none",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2c27t"]
size = Vector2(11, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5jb2"]
size = Vector2(10.5, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5hm2"]
size = Vector2(2, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rc120"]
size = Vector2(2, 7)

[sub_resource type="Resource" id="Resource_uyc68"]
script = ExtResource("9_tdk8y")
sf_name = "enemy_hurt_one"
sf_vol = -1.0
sf_pitch = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da5uq"]
size = Vector2(12, 7)

[node name="whale" type="Node2D" node_paths=PackedStringArray("move_timer", "charge_timer", "shoot_timer", "bubble_anim")]
script = ExtResource("1_0e55k")
move_timer = NodePath("move_timers/move_timer")
charge_timer = NodePath("move_timers/charge_timer")
shoot_timer = NodePath("move_timers/shoot_timer")
water_ref = ExtResource("2_mcg1x")
bubble_anim = NodePath("bubble_anim")

[node name="anim_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jsklx")
autoplay = "default"
frame_progress = 0.261184

[node name="bubble_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -9)
sprite_frames = SubResource("SpriteFrames_npoxn")
animation = &"none"
autoplay = "none"

[node name="collision_areas" type="Node2D" parent="."]

[node name="top" type="Area2D" parent="collision_areas"]
visible = false
position = Vector2(0, -4)
collision_layer = 0
collision_mask = 64

[node name="top_shape" type="CollisionShape2D" parent="collision_areas/top"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_2c27t")

[node name="bottom" type="Area2D" parent="collision_areas"]
visible = false
position = Vector2(0, 6)
collision_layer = 0
collision_mask = 64

[node name="bot_shape" type="CollisionShape2D" parent="collision_areas/bottom"]
position = Vector2(-0.25, 0)
shape = SubResource("RectangleShape2D_k5jb2")

[node name="left" type="Area2D" parent="collision_areas"]
visible = false
position = Vector2(-8, 0)
collision_layer = 0
collision_mask = 64

[node name="left_shape" type="CollisionShape2D" parent="collision_areas/left"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_b5hm2")

[node name="right" type="Area2D" parent="collision_areas"]
visible = false
position = Vector2(7, 0)
collision_layer = 0
collision_mask = 64

[node name="right_shape" type="CollisionShape2D" parent="collision_areas/right"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_rc120")

[node name="move_timers" type="Node2D" parent="."]

[node name="move_timer" type="Timer" parent="move_timers"]
wait_time = 3.0
one_shot = true

[node name="charge_timer" type="Timer" parent="move_timers"]
wait_time = 0.8
one_shot = true

[node name="shoot_timer" type="Timer" parent="move_timers"]
wait_time = 0.8
one_shot = true

[node name="health+damage" type="Node2D" parent="."]

[node name="flasher" parent="health+damage" node_paths=PackedStringArray("target_nodes") instance=ExtResource("7_y1rsg")]
target_nodes = [NodePath("../../anim_sprite")]

[node name="enemy_health" parent="health+damage" node_paths=PackedStringArray("flasher_node", "die_node") instance=ExtResource("7_carwn")]
hurt_sf = SubResource("Resource_uyc68")
flasher_node = NodePath("../flasher")
die_node = NodePath("../..")

[node name="hitbox_area" type="Area2D" parent="health+damage"]
collision_layer = 4
collision_mask = 0

[node name="hitbox_shape" type="CollisionShape2D" parent="health+damage/hitbox_area"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_da5uq")

[connection signal="area_entered" from="collision_areas/top" to="." method="_on_top_area_entered"]
[connection signal="area_entered" from="collision_areas/bottom" to="." method="_on_bottom_area_entered"]
[connection signal="area_entered" from="collision_areas/left" to="." method="_on_left_area_entered"]
[connection signal="area_entered" from="collision_areas/right" to="." method="_on_right_area_entered"]
[connection signal="timeout" from="move_timers/move_timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="move_timers/charge_timer" to="." method="_on_charge_timer_timeout"]
[connection signal="timeout" from="move_timers/shoot_timer" to="." method="_on_shoot_timer_timeout"]
